esphome/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome-deployment
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome
        imagePullPolicy: Always
        ports:
        - containerPort: 6052
        volumeMounts:
        - mountPath: /config
          name: esphome-volume
      volumes:
      - name: esphome-volume
        persistentVolumeClaim:
          claimName: esphome-config-pvc
      dnsConfig:
        options:
        - name: ndots
          value: "2"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
