esphome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome-service
spec:
  selector:
    app: esphome
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6052
